# Modeling

./: .gitignore
Automatic_modeling_system/: jianmo
Automatic_modeling_system/zdong/: __init__.py  roof_fix_worklog.md
Automatic_modeling_system/zdong/app/: __init__.py  assets.py  drawing_parser.py  ifc_runtime.py  intent_service.py  llm_client.py  main.py  models.py  pipeline.py  planning.py  store.py  storey_inference.py  windows_dwg_converter_service.py
Automatic_modeling_system/zdong/docs/: 2026-03-30会话分析报告.md  2026-04-02_图纸解析DXF代理分工报告_V2.md  2026-04-02_图纸解析代理分工报告_V1.md  2026-04-02_建筑自动建模图纸解析模块修改方案_V1.md  2026-04-02_构件识别专项工作日志.md  2026-04-02_构件识别专项检测报告.md  2026-04-02_检测问题整改分工方案.md  2026-04-02_检测问题整改执行与审查报告.md  2026-04-02_楼层关联拼接专项工作日志.md  2026-04-02_楼层关联拼接专项检测报告.md  2026-04-02_自动建模系统完整链路工作日志.md  2026-04-02_自动建模系统完整链路检测报告.md  2026-04-03_新图纸未驱动模型检测报告.md  DXF主链路交付总结报告.md  STEP04_AI建模意图优化_工作日志.md  STEP04_AI建模意图优化设计报告.md  Windows远程DWG转换服务.md  代理编排与交付方案.md  图纸解析流程.md  完整建模指令模板.md  建筑自动建模系统设计文档.md  建筑自动建模需求转化文档.docx  建筑自动建模需求转化文档.md  标准版主链路任务单.md  模块分工建议.md  模块要求.docx  模块要求.md
Automatic_modeling_system/zdong/tests/: test_agent_plan_standard.py  test_agent_runbook_standard.py  test_annotation_binder.py  test_assembly_engine.py  test_bim_engine_source_geometry.py  test_component_recognizer.py  (+27 more)
Automatic_modeling_system/图纸文件/: README.md  pyproject.toml  专用宿舍楼-建施.dwg  专用宿舍楼-结施.dwg
Automatic_modeling_system/图纸文件/tests/: test_api.py  test_drawing_parser.py  test_frontend_config.py  test_pipeline.py
Automatic_modeling_system/图纸文件/tools/oda/: oda-file-converter.msi
(+37 files in other folders)
