[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jianmo-mvp"
version = "0.1.0"
description = "MVP for an architecture auto-modeling system based on design documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ezdxf>=1.4.3,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pymupdf>=1.27.2,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]
ifc = [
  "ifcopenshell>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jianmo*"]
